video/ome/svc-viewer-edge/api.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: api-edge
spec:
  selector:
    app: ovenmediaengine
    ome-type: edge
  ports:
  - name: http
    port: 80
    targetPort: api
