video/ome/svc-viewer-edge/lb-webrtc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: webrtc-ice
spec:
  type: LoadBalancer
  # allocateLoadBalancerNodePorts: false
  selector:
    app: ovenmediaengine
    ome-type: edge
  ports:
  - name: candidate
    port: 10000
    protocol: UDP
  - name: turn
    port: 3478
