video/ome/svc-viewer-edge/viewer.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: viewer
spec:
  selector:
    app: ovenmediaengine
    ome-type: edge
  ports:
  - name: http
    port: 80
    targetPort: publish
